// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UntypedInput must match the snapshot with default Props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 0 1.125rem;
  border-radius: 1.875rem;
  border: 0.0625rem solid rgba(0,0,0,0.2);
  margin-bottom: 0.9375rem;
  background-color: rgb(242,242,242);
  border-color: rgba(0,0,0,0.2);
}

.c2 {
  border: none;
  background: transparent;
  background-color: transparent;
  padding: 0 0.625rem;
  width: 100%;
  color: rgba(0,0,0,0.55);
  font-size: 0.875rem;
  line-height: 2.188rem;
}

.c1 {
  width: 1.875rem;
  color: rgb(232,24,68);
  font-size: 1rem;
}

@media (min-width:47.94rem) {
  .c2 {
    font-size: 1rem;
    line-height: 2.5rem;
  }
}

@media (min-width:47.94rem) {
  .c1 {
    font-size: 1.125rem;
  }
}

<div
  className="c0"
>
  <label
    aria-label="qux"
    className="c1"
    htmlFor="bar"
  >
    <svg
      icon="envelope"
      lib="@fortawesome/react-fontawesome"
      prefix="far"
    />
  </label>
  <input
    aria-required={false}
    className="c2"
    id="bar"
    name="bar"
    onChange={[Function]}
    placeholder="qux"
    required={false}
    tabIndex={0}
    type="foo"
    value="baz"
  />
</div>
`;

exports[`UntypedInput must return the diff between snapshot when input is required or optionnal 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -11,17 +11,17 @@
        lib="@fortawesome/react-fontawesome"
        prefix="far"
      />
    </label>
    <input
-     aria-required={true}
+     aria-required={false}
      className="ntcd9w-0 ntcd9w-7 osRhJ"
      id="bar"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
-     required={true}
+     required={false}
      tabIndex={0}
      type="foo"
      value="baz"
    />
  </div>
`;

exports[`UntypedInput must return the diff between snapshot with a negative vs a postive Tab Index 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -18,10 +18,10 @@
      id="bar"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
      required={false}
-     tabIndex="-1"
+     tabIndex="0"
      type="foo"
      value="baz"
    />
  </div>
`;
